--- a/index.html
+++ b/index.html
@@ -16,241 +16,167 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+  <title>FREE Pitbull Concert Presented by Dan Newlin</title>
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
 
-  <section class="hero" id="hero">
-    <div class="bg-hero">
-      <div class="overlay"></div>
-
-      <div class="container">
-        <div class="row">
-
-          <div class="col-md-12">
-            <img src="img/placeholder.com-logo1.png" alt="Logo" class="logo">
-            <h1 class="text-uppercase text-center text-white main-title">Your Innovative Product</h1>
-          </div>
-
-          <div class="col-md-6 hero-left">
-            <div class="row hero-left-up">
-              <div class="col-md-12">
-                <h2 class="left-title1">Results in only 4 weeks</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              </div>
-            </div>
-            <div class="hero-left-down row position-relative">
-              <div class="row">
-                <div class="col-md-5 product-image-wrapper">
-                  <img class="w-100" src="https://via.placeholder.com/300x500?text=Product+Image" alt="Product Image">
-                </div>
-                <div class="col-md-12 mb-5">
-                  <div class="row">
-                    <div class="col-md-7 ml-auto pl-0">
-                      <h3 class="left-title2">
-                        What the product does
-                      </h3>
-                    </div>
-                  </div>
-
-                  <ul class="left-title-checklist">
-                    <li class="row">
-                      <div class="col-md-7 ml-auto list-item">
-                        <i class="fas fa-check"></i> Lorem ipsum dolor sit amet
-                      </div>
-                    </li>
-                    <li class="row">
-                      <div class="col-md-7 ml-auto list-item">
-                        <i class="fas fa-check"></i> Lorem ipsum dolor sit amet
-                      </div>
-                    </li>
-                    <li class="row">
-                      <div class="col-md-7 ml-auto list-item">
-                        <i class="fas fa-check"></i> Lorem ipsum dolor sit amet
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-12 hero-bottom-arrow">
-                  <h3>Request now a <span class="red">free sample</span> of our product</h3>
-                </div>
-
-              </div>
-            </div>
-        </div>
-
-        <div class="col-md-6 hero-right">
-          <form class="hero-form" action="/">
-            <h3>Interested in our product?</h3>
-            <p class="main-form-text">Let us walk you through our innovative product and let us give you the opportunity to try it for free.</p>
-
-            <input type="text" placeholder="Full Name*" name="name">
-            <input type="email" placeholder="Email*" name="email">
-            <input type="tel" placeholder="Phone Number*" name="phone">
-            <input type="number" placeholder="ZIP Code*" name="zip">
-            <select name="" id="">
-              <option value="Option 1">Option 1</option>
-              <option value="Option 2">Option 2</option>
-            </select>
-
-            <input type="submit" class="btn sbmt-btn" value="REQUEST A FREE SAMPLE">
-
-            <p class="disclaimer-text">
-              Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-            </p>
-          </form>
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-  <div class="container trust-elements py-5 mb-5">
-    <div class="row">
-      <div class="col-md-2 text-center">
-        <img class="img-fluid" src="https://via.placeholder.com/200x100" alt="">
-      </div>
-      <div class="col-md-2 text-center">
-        <img class="img-fluid" src="https://via.placeholder.com/200x100" alt="">
-      </div>
-      <div class="col-md-2 text-center">
-        <img class="img-fluid" src="https://via.placeholder.com/200x100" alt="">
-      </div>
-    </div>
-  </div>
-  </section>
-
-  <section class="page-content">
+  <section class="hero">
+    <div class="hero-overlay"></div>
     <div class="container">
       <div class="row">
+        <div class="col-md-6 hero-text-box">
+          <h1>Pitbull Live</h1>
 
-        <div class="col-md-12 mb-5">
-          <h1 class="main-content-title">
-            The story behind our product
-          </h1>
-        </div>
+          <hr class="hero-line">
 
-        <div class="col-md-8 mb-5">
-          <h3>Unspoiled Nature</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-        <div class="col-md-4 mb-5">
-          <img class="img-fluid" src="https://via.placeholder.com/400x200" alt="">
-        </div>
+          <h1><span>FREE</span> Concert</h1>
 
-        <div class="col-md-4 mb-5">
-          <img class="img-fluid" src="https://via.placeholder.com/400x200" alt="">
+          <p>Honoring Officer <span>Kevin Valencia</span></p>
+          <p>Come Your Support to the Valencia Family & Enjoy a Night of Great Music. <span>ALL FREE!</span></p>
         </div>
-        <div class="col-md-8 mb-5">
-          <h3>Variety of Fruits</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
+        <div class="col-md-6">
+          <form action="" class="hero-form">
+            <h3>Register to Win VIP Access</h3>
+            <p>Stay informed with Newlin Law.</p>
 
-        <div class="col-md-8 mb-5">
-          <h3>Made with Love</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-        <div class="col-md-4 mb-5">
-          <img class="img-fluid" src="https://via.placeholder.com/400x200" alt="">
-        </div>
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            <input type="submit" class="hero-submit animated infinite slow pulse" value="Register Now">
 
+          </form>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="testimonials">
-    <div class="testimonial-carousel" data-flickity='{ "contain": true, "wrapAround": true }'>
+  <section class="hero-cards">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 card-hero">
+          <h2>
+            Lorem Ipsum
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <hr class="thicc-line">
+        </div>
 
-      <div class="caroucel-cell">
-        <div class="testimonial text-center">
-          <div class="row">
-            <div class="col-md-12">
-              <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-              </p>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <span class="author">
-              <span class="author-name">Mark Wright</span> - Founder & CEO
-            </span>
-          </div>
-          <div class="col-md-12">
-            <img src="https://via.placeholder.com/100" alt="">
-          </div>
+        <div class="col-md-4 card-hero">
+          <h2>
+            Lorem Ipsum
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <hr class="thicc-line">
+        </div>
 
+        <div class="col-md-4 card-hero">
+          <h2>
+            Lorem Ipsum
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+            <hr class="thicc-line">
         </div>
       </div>
-
-      <div class="caroucel-cell">
-        <div class="testimonial text-center">
-          <div class="row">
-            <div class="col-md-12">
-              <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-              </p>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <span class="author">
-              <span class="author-name">Mark Wright</span> - Founder & CEO
-            </span>
-          </div>
-          <div class="col-md-12">
-            <img src="https://via.placeholder.com/100" alt="">
-          </div>
-
-        </div>
-      </div>
-
-      <div class="caroucel-cell">
-        <div class="testimonial text-center">
-          <div class="row">
-            <div class="col-md-12">
-              <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-              </p>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <span class="author">
-              <span class="author-name">Mark Wright</span> - Founder & CEO
-            </span>
-          </div>
-          <div class="col-md-12">
-            <img src="https://via.placeholder.com/100" alt="">
-          </div>
-
-        </div>
-      </div>
-
     </div>
   </section>
 
-  <section class="cta-banner">
+  <section class="pitbull-cards">
     <div class="row">
-      <div class="col-md-8 text-center">
-        <p>
-          Get a free sample today and join the growing community of "product" lovers
-        </p>
-        <a href="#hero" class="btn cta-btn">
-          Request a free sample
-        </a>
+      <div class="col-md-4 card-pb">
+        <div class="text-box">
+          <h1>LOREM IPSUM</h1>
+          <h5>Excepteur sint occaecat</h5>
+          <hr class="short-line">
+        </div>
+      </div>
+
+      <div class="col-md-4 card-pb">
+        <div class="text-box">
+          <h1>LOREM IPSUM</h1>
+          <h5>Excepteur sint occaecat</h5>
+          <hr class="short-line">
+        </div>
+      </div>
+
+      <div class="col-md-4 card-pb">
+        <div class="text-box">
+          <h1>LOREM IPSUM</h1>
+          <h5>Excepteur sint occaecat</h5>
+          <hr class="short-line">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="huge-banner">
+    <h1 class="big-date">06/01/2019</h1>
+    <h3>Excepteur sint occaecat cupidatat </h3>
+    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+  </section>
+
+  <section class="ending-info">
+    <div class="row">
+      <div class="col-md-3">
+        <h1>Excepteur sint occaecat cupidatat non </h1>
+        <hr class="little-line">
+      </div>
+
+      <div class="col-md-3">
+        <h1>Excepteur sint occaecat cupidatat non </h1>
+        <hr class="little-line">
+      </div>
+
+      <div class="col-md-3">
+        <h1>Excepteur sint occaecat cupidatat non </h1>
+        <hr class="little-line">
+      </div>
+
+      <div class="col-md-3">
+        <h1>Excepteur sint occaecat cupidatat non </h1>
+        <hr class="little-line">
+      </div>
+    </div>
+  </section>
+
+  <section class="map">
+    <div class="row">
+      <div class="col-md-12">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.4683861734566!2d-81.43990818457195!3d28.555694594304445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7799023a6a435%3A0xb21922b1d71bb593!2sCentral+Florida+Fair!5e0!3m2!1sen!2sus!4v1555103546878!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
   </section>
 
   <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 ml-auto">
+          <img src="https://www.newlinlaw.com/" alt="Dan Newlin">
+          <h5 class="call-today">Call Today</h5>
+          <h4 class="phone-today">800-257-1822</h4>
+        </div>
 
+        <div class="col-md-3 mr-auto">
+          <h5 class="footer-title">Contact Us</h5>
+          <b>Central Florida</b>
+          <p>7335 W. Sand Lake Road</p>
+          <p>Suite 300</p>
+          <p>Orlando, FL 32819</p>
+          <h6><a href="tel:18002571822">800-257-1822</a></h6>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -261,6 +187,10 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
