--- a/index.html
+++ b/index.html
@@ -121,9 +121,17 @@
   </section>
 
   <section class="huge-banner">
-    <h1 class="big-date">06/01/2019</h1>
-    <h3>Excepteur sint occaecat cupidatat </h3>
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="huge-banner-text-box">
+            <h1>Lorem Ipsum</h1>
+            <h3>Excepteur sint occaecat cupidatat </h3>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="ending-info">
