chromebook  weeknd changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h1><span>FREE</span> Concert</h1>
 
           <p>Honoring Officer <span>Kevin Valencia</span></p>
-          <p>Come Your Support to the Valencia Family & Enjoy a Night of Great Music. <span>ALL FREE!</span></p>
+          <p>Come Show Your Support to the Valencia Family & Enjoy a Night of Great Music. <span>ALL FREE!</span></p>
         </div>
         <div class="col-md-6">
           <form action="" class="hero-form">
@@ -52,82 +52,39 @@
 
           </form>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="hero-cards">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 card-hero">
-          <h2>
-            Lorem Ipsum
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-          <hr class="thicc-line">
-        </div>
-
-        <div class="col-md-4 card-hero">
-          <h2>
-            Lorem Ipsum
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-          <hr class="thicc-line">
-        </div>
-
-        <div class="col-md-4 card-hero">
-          <h2>
-            Lorem Ipsum
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-            <hr class="thicc-line">
+        <div class="col-md-12 presented-by d-flex">
+          <h2>Presented by:</h2>
+          <img src="img/logo-dan.png" alt="">
         </div>
       </div>
     </div>
   </section>
 
-  <section class="pitbull-cards">
-    <div class="row">
-      <div class="col-md-4 card-pb">
-        <div class="text-box">
-          <h1>LOREM IPSUM</h1>
-          <h5>Excepteur sint occaecat</h5>
-          <hr class="short-line">
-        </div>
-      </div>
-
-      <div class="col-md-4 card-pb">
-        <div class="text-box">
-          <h1>LOREM IPSUM</h1>
-          <h5>Excepteur sint occaecat</h5>
-          <hr class="short-line">
-        </div>
-      </div>
-
-      <div class="col-md-4 card-pb">
-        <div class="text-box">
-          <h1>LOREM IPSUM</h1>
-          <h5>Excepteur sint occaecat</h5>
-          <hr class="short-line">
+  <div class="extra-info text-center">
+    <div class="gradient"></div>
+    <div class="ungradient">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <p><span>Saturday June 1st at 6PM - Central Florida Fairgrounds</span></p>
+            <p>With Special Guests DJ Vice & Nacho</p>
+            <p><span>No ticket needed, just show up with your family and friends!</span></p>
+            <p class="disclaimer">No Bags allowed, only small clear bags permitted</p>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+        <div class="bottom-gradient"></div>
+  </div>
 
   <section class="huge-banner">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="huge-banner-text-box">
-            <h1>Lorem Ipsum</h1>
-            <h3>Excepteur sint occaecat cupidatat </h3>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <h1>Our Local Hero Needs Your Support</h1>
+            <h3>Officer Valencia’s Story</h3>
+            <a href="https://officervalencia.com/" target="_blank" class="cta-btn animated infinite slow pulse">Read More</a>
           </div>
         </div>
       </div>
