--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <section class="hero">
+  <section class="hero py-5 py-md-0">
     <div class="hero-overlay"></div>
     <div class="container">
       <div class="row">
@@ -78,67 +78,217 @@
   </div>
 
   <section class="huge-banner">
+    <img class="w-100" src="img/Valencia_Hero.jpg" alt="Officer Kevin Valencia">
+
+    <div class="huge-banner-text-box">
+      <h1>Our Local Hero Needs Your Support</h1>
+      <h3>Officer Valencia’s Story</h3>
+      <a href="https://officervalencia.com/" target="_blank" class="cta-btn animated infinite slow pulse">Read More</a>
+    </div>
+
+  </section>
+
+  <section class="attorney-info text-center py-5">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="huge-banner-text-box">
-            <h1>Our Local Hero Needs Your Support</h1>
-            <h3>Officer Valencia’s Story</h3>
-            <a href="https://officervalencia.com/" target="_blank" class="cta-btn animated infinite slow pulse">Read More</a>
-          </div>
-        </div>
-      </div>
+      <h1 class="text-center mb-5 section-title">Presented By</h1>
+      <img src="img/newlin.jpg" alt="Dan Newlin Injury Attorneys" class="w-100">
+      <p class="mt-5">Dan Newlin Injury Attorneys is a nationally recognized and highly accomplished personal injury law firm, serving the state of Florida. Our attorneys are experts in the area of personal injury law and dedicated to helping clients who have sustained an injury at no fault of their own. Dan Newlin Injury Attorneys currently consists of a team of 55 lawyers and 150 support staff; we provide ourselves on providing personal, professional and expert representation to all of our clients. Please do not hesitate to contact Attorney Dan Newlin directly at 407-888-8000.</p>
     </div>
   </section>
 
-  <section class="ending-info">
-    <div class="row">
-      <div class="col-md-3">
-        <h1>Excepteur sint occaecat cupidatat non </h1>
-        <hr class="little-line">
-      </div>
+  <section class="faq py-5">
+    <div class="container">
+      <h1 class="text-center mb-5 section-title">FAQ's</h1>
+      <div class="accordion" id="accordionExample">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Do I need a ticket?
+              </button>
+            </h5>
+          </div>
 
-      <div class="col-md-3">
-        <h1>Excepteur sint occaecat cupidatat non </h1>
-        <hr class="little-line">
-      </div>
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+              No. This is a non-ticketed event.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Do I need to register or sign up?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body">
+              No. Just show up.
+            </div>
+          </div>
+        </div>
 
-      <div class="col-md-3">
-        <h1>Excepteur sint occaecat cupidatat non </h1>
-        <hr class="little-line">
-      </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Who is performing?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div class="card-body">
+              Pitbull is the main act. Guests feature DJ Vice and Nacho.
+            </div>
+          </div>
+        </div>
 
-      <div class="col-md-3">
-        <h1>Excepteur sint occaecat cupidatat non </h1>
-        <hr class="little-line">
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                Where is the venue?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+            <div class="card-body">
+              The concert will be held at the <a href="https://www.google.com/maps/dir//Central+Florida+Fair.,+4603+W+Colonial+Dr,+Orlando,+FL+32808/@28.5555537,-81.4401547,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x88e7799023a6a435:0xb21922b1d71bb593!2m2!1d-81.437966!2d28.555549" target="_blank" rel="noopener">Central Florida Fair, 4603 W Colonial Drive, Orlando, FL 32808</a>.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingFive">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                What day is the concert?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+            <div class="card-body">
+              Saturday, June 1
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingSix">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                Is this an all ages event?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+            <div class="card-body">
+              Yes, all ages are welcome.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingSeven">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                Is there a fee for parking?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+            <div class="card-body">
+              No. Parking is free.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingEight">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                What can I bring into the concert?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
+            <div class="card-body">
+              Only small clear bags are permitted. No other bags allowed.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingNine">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+              Can I bring chairs into the concert?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordionExample">
+            <div class="card-body">
+              No.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingTen">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+              Can I bring blankets into the concert?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#accordionExample">
+            <div class="card-body">
+              Yes.
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header" id="headingEleven">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+              Is there a rain date?
+              </button>
+            </h5>
+          </div>
+          <div id="collapseEleven" class="collapse" aria-labelledby="headingEleven" data-parent="#accordionExample">
+            <div class="card-body">
+              No. The concert is on June 1st - rain or shine.
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
 
   <section class="map">
-    <div class="row">
-      <div class="col-md-12">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.4683861734566!2d-81.43990818457195!3d28.555694594304445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7799023a6a435%3A0xb21922b1d71bb593!2sCentral+Florida+Fair!5e0!3m2!1sen!2sus!4v1555103546878!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
-    </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.468543015323!2d-81.4399081845848!3d28.555689882448235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e7799023a6a435%3A0xb21922b1d71bb593!2sCentral+Florida+Fair!5e0!3m2!1sen!2sus!4v1555335582775!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </section>
 
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-3 ml-auto">
-          <img src="https://www.newlinlaw.com/" alt="Dan Newlin">
+        <div class="col-12 col-sm-6 col-md-4 ml-auto p-5 text-center">
+          <img src="img/logo-dan.png" class="w-100 mb-3 logo-footer" alt="Dan Newlin">
           <h5 class="call-today">Call Today</h5>
           <h4 class="phone-today">800-257-1822</h4>
         </div>
 
-        <div class="col-md-3 mr-auto">
+        <div class="col-12 col-sm-6 col-md-4 mr-auto p-5">
           <h5 class="footer-title">Contact Us</h5>
-          <b>Central Florida</b>
+          <p class="my-3"><b>Central Florida</b></p>
           <p>7335 W. Sand Lake Road</p>
           <p>Suite 300</p>
           <p>Orlando, FL 32819</p>
-          <h6><a href="tel:18002571822">800-257-1822</a></h6>
+          <p class="my-3"><b><a href="tel:18002571822">800-257-1822</a></b></p>
         </div>
       </div>
     </div>
